--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.svg" />
+    <link rel="icon" href="/devashish-consultant-portfolio/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Devashish Jaiswal | Fractional CTO</title>
+
+    <!-- Tailwind CDN for quick demo -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              'brand-primary': '#00F5FF',
+              'brand-secondary': '#00B8D9',
+              'base-bg': '#0D0D0D',
+              'base-card': '#1A1A1A',
+              'base-border': '#292929',
+              'text-primary': '#E0E0E0',
+              'text-secondary': '#A0A0A0',
+            },
+            fontFamily: {
+              sans: ['Poppins', 'sans-serif'],
+            },
+          },
+        },
+      }
+    </script>
   </head>
   <body class="bg-base-bg text-text-primary font-sans">
     <div id="root"></div>
-    <!-- Vite will inject your bundle automatically in production -->
+    <!-- Vite will inject JS bundle automatically -->
   </body>
 </html>
