--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </head>
   <body class="bg-base-bg text-text-primary font-sans">
     <div id="root"></div>
-    <!-- Vite will inject JS bundle automatically -->
+    <!-- Vite's entry point -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
